<resources>
    <string name="app_name">Classup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_acitivity">Please Login</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_teacher_menu">Main Menu</string>
    <string name="teacher_menu_Heading">Please select the action you want to perform</string>
    <string name="title_activity_select_class">"Select Class"</string>
    <string name="title_activity_attendance_list">Attendance List</string>
    <string name="confirm_attendance_submit">Confirm Attendance Submission</string>
    <string name="confirm_attendanc_message">Please confirm Attendance Submission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_test_manager">Test Manager</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="send_bulk_sms">Send Bulk SMS</string>
    <string name="school_admin_menu">School Admin Menu</string>
    <string name="logout">Log Out</string>
    <string name="send_whole_school">Send to Whole School</string>
    <string name="send_select_classes">Send to Selected Classes</string>
    <string name="compose_sms">Compose SMS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pending_test">Pending Tests</string>
    <string name="title_activity_completed_tests">Completed Tests</string>
    <string name="title_activity_pending_tests">Pending Tests</string>
    <string name="title_activity_marks_entry">Marks Entry</string>
    <string name="title_activity_set_subjects">Set Subjects</string>
    <string name="select_date">Select Date:</string>
    <string name="select_class">Select Class:</string>
    <string name="select_section">Select Section:</string>
    <string name="select_subject">Select Subject:</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="compose_message">Compose Message</string>
    <string name="select_student">Select Student(s)</string>
    <string name="parent_menu_Heading">Parent Menu</string>
    <string name="commnication_history_heading">Communication History</string>
    <string name="communication_date">Date: </string>
    <string name="daily_attendance_summary">Daily Attendance Summary</string>
    <string name="change_password">Change Password</string>
    <string name="add_student">Add Student</string>
    <string name="class_standard">Class/Standard</string>
    <string name="first_name">First Name</string>
    <string name="mobile_1">Mobile 1</string>
    <string name="mobile_2">Mobile 2</string>
    <string name="surname">Surname</string>
    <string name="section_batch">Section/Batch</string>
    <string name="regitration_number">Regitration Number</string>
    <string name="parent_name">Parent Name</string>
    <string name="mobile">Mobile 1</string>
    <string name="registration_no">Registration No</string>
    <string name="mobile1">Parent\'s Mobile 1</string>
    <string name="mobile2">Parent\'s Mobile 2</string>
    <string name="update_student">Update Student</string>
    <string name="roll_no_optional">Roll No (Optional)</string>
    <string name="name">Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="full_name">Full Name</string>
    <string name="login_id">Login ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="update_teacher">Update Teacher</string>
    <string name="is_class_teacher">Is Class Teacher?</string>
    <string name="login_id1">Login ID</string>
    <string name="teacher_mobile">Mobile</string>
    <string name="teacher_name">Name</string>
    <string name="select_class_section">Select Class Section:</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_to_parents">Send Message to Parents</string>
    <string name="attendance_summaries">Attendance Summaries</string>
    <string name="bus_attendance">Bus Attendance</string>
    <string name="schedule_test">Schedule Test</string>
    <string name="schedule_term_test">Schedule Term Test</string>
    <string name="manage_tests">Manage Tests</string>
    <string name="take_update_attendance">Take/Update Attendance</string>
    <string name="set_my_subjects">Set My Subjects</string>
    <string name="communicate_with_school">Communicate with School</string>
    <string name="communication_history">Communication History</string>
    <string name="month_wise_attendance">Month wise Attendance</string>
    <string name="subject_wise_marks">Subject Wise Marks</string>
    <string name="term_test_results">Term Test Results</string>
    <string name="home_work">Home Work</string>
    <string name="hw_due_date">Due Date</string>
    <string name="take_picture">Take Picture</string>
    <string name="hw_image">HW Image</string>
    <string name="absent">Absent</string>
    <string name="total">Total: </string>
    <string name="parent">Parent:</string>
    <string name="roll_no">Roll No:</string>
    <string name="textview">TextView</string>
    <string name="the_full_name">Full Name</string>
    <string name="the_parent">Parent</string>
    <string name="the_parent1">Parent:</string>
    <string name="present">Present</string>
    <string name="present_count">Present: </string>
    <string name="absent_count">Abs: </string>
    <string name="the_roll_no">Roll No</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="communicate_with_parents">Communicate with Parents</string>
    <string name="password">password</string>
    <string name="send_message_to_whole_class">Send Message to Whole Class</string>
    <string name="student_name">Name</string>
    <string name="txt_absent">Absent</string>
    <string name="marks_grade">Marks/Grade</string>
    <string name="txt_parent_name">Parent Name</string>
    <string name="txt_parent">Parent</string>
    <string name="txt_roll_no">Roll No</string>
    <string name="txt_textview">TextView</string>
    <string name="the_class">Class:</string>
    <string name="date">Date:</string>
    <string name="sub">Sub:</string>
    <string name="submit">Submit</string>
    <string name="current_year">Current Year</string>
    <string name="last_year">Last Year</string>
    <string name="till_date">Till Date</string>
    <string name="select_class_section_subject">Select Class/Section/Subject:</string>
    <string name="select_month">Select Month:</string>
    <string name="grade_based">Grade Based</string>
    <string name="pass_marks">Pass Marks:</string>
    <string name="max_marks">Max Marks:</string>
    <string name="please_provide_details_for_this_test">Please provide Details For this Test</string>
    <string name="mm">mm</string>
    <string name="pm">pm</string>
    <string name="topics_comments_optional">Topics/Comments (Optional):</string>
    <string name="comments">comments</string>
    <string name="test">test</string>
    <string name="test_topics">test topics</string>
    <string name="term_marks">Term Test</string>
    <string name="periodic_assessment">Periodic Test</string>
    <string name="notebook_submission">Notebook Sub</string>
    <string name="sub_enrich">Sub Enrich</string>
    <string name="co_scholastic">Enter Co-Scholastic Grades</string>
    <string name="title_activity_teacher_menu2">TeacherMenu2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_co_scholastic">CoScholastic</string>
    <string name="term_1">Term 1</string>
    <string name="term_2">Term 2</string>
    <string name="work_education_or_pre_vocational_education">Work Education (or Pre-vocational Education)</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="art_education">Art Education</string>
    <string name="health_physical_education"><![CDATA[Health & Physical Education]]></string>
    <string name="discipline">Discipline</string>
    <string name="class_teacher_s_remarks">Class Teacher\'s Remarks</string>
    <string name="promoted_to_class">Promoted to Class:</string>
    <string name="teacher_attenance">Teacher Attenance</string>
    <string name="communicate_string_communicate_with_parents">Communicate @string/communicate_with_parents</string>
    <string name="activity_group_communication">Activity Group Communication</string>
    <string name="notices_circulars"><![CDATA[Notices & Circulars]]></string>
    <string name="today_s_arrangements">Today\'s Arrangements</string>
    <string name="comm_center">Communication Center</string>
    <string name="period">Period:</string>
    <string name="group_incharge">Group Incharge:</string>
    <string name="sent_to">Sent to:</string>
    <string name="please_select_a_category">Please Select a Category:</string>
    <string name="compose_message_max_200_characters">Compose Message (Max 200 characters):</string>
    <string name="practical">Practical</string>
    <string name="circulars">Circulars</string>
    <string name="time_table">Time Table</string>
    <string name="share_video">Share Video</string>
    <string name="add_pics">Share Pics</string>
    <string name="enter_brief_description">Enter Brief Description</string>
    <string name="brief_description_of_image_video">Brief description of Image/Video</string>
    <string name="image_video">Image/Video</string>
    <string name="notice_image">Notice via Pic/Image</string>
    <string name="playing_the_video_in_upload_progress">Preview before Upload</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="cant_access_play">Can\'t Access Play</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="initiation_started">Initiation Started</string>
    <string name="initiation_completed">Initiation Completed</string>
    <string name="youtube_upload">YouTube Upload</string>
    <string name="upload_in_progress">Upload in Progress</string>
    <string name="upload_completed">Upload Completed</string>
    <string name="upload_not_started">Upload not Started</string>
    <string name="channel_name">ClassUp</string>
    <string name="channel_description">ClassUp</string>
    <string name="portfolio">Portfolio</string>
    <string name="multi_asses">Mult Asses</string>
    <string name="online_classes">Online Classes</string>
    <string name="topic">Topic</string>
    <string name="video_link">Video Link:</string>
    <string name="doc_link">Doc Link:</string>
    <string name="teacher">Teacher:</string>
    <string name="test_management"><![CDATA[Test & Exam Management]]></string>
    <string name="enter_marks">Enter Marks</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="please_note">Please Note:</string>
    <string name="login_message">ClassUp is available only for the users of Schools who have subscribed to our service. If you are a parent your login id will be your Mobile Number registered with School. If you are a teacher then your login id is provided to you by School. If you have forgotten password, Please enter your login id and hit \"Forgot Password\" on top</string>
    <string name="select_class_subject"><![CDATA[Select Class & Subject:]]></string>
    <string name="brief_description">Brief Description</string>
    <string name="you_tube_link">Youtube Video Link</string>
    <string name="support_doc_pdf" />
    <string name="support_doc">Support Doc PDF</string>
</resources>