<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.classup.ParentsMenu">

    <TextView android:text="@string/parent_menu_Heading"
        android:id="@+id/txt_parent_menu_Heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_parent_Attendance"
        android:text="@string/month_wise_attendance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="take_action"/>

    <Button
        android:id="@+id/btn_term_test_results"
        android:text="@string/term_test_results"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="take_action"/>

    <Button
        android:id="@+id/btn_subject_wise_marks"
        android:text="@string/subject_wise_marks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="take_action"/>
    <Button
        android:id="@+id/btn_communicate_with_school"
        android:text="@string/communicate_with_school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="take_action"/>
    <Button
        android:id="@+id/btn_communicate_history"
        android:text="@string/communication_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="take_action"/>
    <Button
        android:id="@+id/btn_parent_change_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:onClick="p_changePassword"/>

   <!-- <Button
        android:id="@+id/btn_parent_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        android:onClick="p_logout"/>-->

</LinearLayout>
