<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/please_provide_details_for_this_test"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.491" />

    <CheckBox
        android:id="@+id/chk_whether_grade_based"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/grade_based"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/max_marks"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chk_whether_grade_based" />

    <EditText
        android:id="@+id/txt_max_marks"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="109dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/mm"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/textView21"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/chk_whether_grade_based"
        android:maxLines="1" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_marks"
        android:textSize="18sp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chk_whether_grade_based"
        app:layout_constraintLeft_toRightOf="@+id/txt_max_marks"
        android:layout_marginLeft="4dp" />

    <EditText
        android:id="@+id/txt_passing_marks"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/pm"
        android:textStyle="bold"
        android:layout_marginStart="308dp"
        app:layout_constraintTop_toTopOf="@+id/txt_max_marks"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView25"
        android:layout_marginLeft="2dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/topics_comments_optional"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/txt_comments"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:lineSpacingExtra="8sp"
        android:text="@string/comments"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_test_confirm"
        android:layout_width="87dp"
        android:layout_height="38dp"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_test_cancel"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_comments" />

    <Button
        android:id="@+id/btn_test_cancel"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_test_confirm"
        app:layout_constraintTop_toTopOf="@+id/btn_test_confirm"
        android:layout_marginTop="0dp" />
</android.support.constraint.ConstraintLayout>