<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_school_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.classup.SchoolAdmin">

    <Button
        android:id="@+id/btn_teacher_att"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="teacherAttendance"
        android:text="@string/teacher_attenance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bulk_sms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sendBulkSMS"
        android:text="@string/send_bulk_sms"
        app:layout_constraintEnd_toEndOf="@+id/btn_teacher_att"
        app:layout_constraintStart_toStartOf="@+id/btn_teacher_att"
        app:layout_constraintTop_toBottomOf="@+id/btn_teacher_att" />

    <Button
        android:id="@+id/btn_attendance_summaries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sendBulkSMS"
        android:text="@string/share_video"
        app:layout_constraintEnd_toEndOf="@+id/btn_share_image2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_bulk_sms"
        app:layout_constraintTop_toBottomOf="@+id/btn_share_image2" />

    <Button
        android:id="@+id/btn_share_image2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sendBulkSMS"
        android:text="@string/notice_image"
        app:layout_constraintEnd_toEndOf="@+id/btn_bulk_sms"
        app:layout_constraintStart_toStartOf="@+id/btn_bulk_sms"
        app:layout_constraintTop_toBottomOf="@+id/btn_bulk_sms" />

    <Button
        android:id="@+id/btn_share_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="attendanceSummary"
        android:text="@string/share_video"
        app:layout_constraintEnd_toEndOf="@+id/btn_attendance_summaries"
        app:layout_constraintStart_toStartOf="@+id/btn_bulk_sms"
        app:layout_constraintTop_toBottomOf="@+id/btn_attendance_summaries" />

    <Button
        android:id="@+id/btn_add_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="addStudent"
        android:text="@string/add_student"
        app:layout_constraintEnd_toEndOf="@+id/btn_share_video"
        app:layout_constraintStart_toStartOf="@+id/btn_share_video"
        app:layout_constraintTop_toBottomOf="@+id/btn_share_video" />

    <Button
        android:id="@+id/btn_update_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="updateStudent"
        android:text="@string/update_student"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_student"
        app:layout_constraintStart_toStartOf="@+id/btn_add_student"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_student" />

    <Button
        android:id="@+id/btn_add_teacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="addTeacher"
        android:text="@string/add_teacher"
        app:layout_constraintEnd_toEndOf="@+id/btn_update_student"
        app:layout_constraintStart_toStartOf="@+id/btn_update_student"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_student" />

    <Button
        android:id="@+id/btn_update_teacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="updateTeacher"
        android:text="@string/update_teacher"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_teacher"
        app:layout_constraintStart_toStartOf="@+id/btn_add_teacher"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_teacher" />

    <Button
        android:id="@+id/btn_change_admin_password"
        android:layout_width="401dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="admin_changePassword"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/btn_update_teacher"
        app:layout_constraintStart_toStartOf="@+id/btn_update_teacher"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_teacher" />
</android.support.constraint.ConstraintLayout>
