<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentCommCenter">

    <Button
        android:id="@+id/button4"
        android:layout_width="392dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:onClick="online_classes"
        android:text="@string/online_classes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button"
        android:layout_width="392dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:onClick="communicate_with_school"
        android:text="@string/communicate_with_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="392dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:onClick="communication_history"
        android:text="@string/communication_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="392dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:onClick="image_video"
        android:text="@string/image_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</android.support.constraint.ConstraintLayout>